# fetchmd

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli-design.md
fetchmd/: __init__.py  cli.py  converter.py  extractor.py  fetcher.py  writer.py
tests/: test_fetcher.py
