[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetchmd"
version = "0.1.0"
description = "Fetch web pages and convert them to Markdown."
readme = "README.md"
requires-python = ">=3.10"
# 基本的な依存関係は空にして、optional-dependencies で管理
dependencies = []

[project.optional-dependencies]
all = [
    "typer",
    "httpx[http2]",
    "readability-lxml",
    "beautifulsoup4",
    "html-to-markdown",
    "aiofiles",
    "pytest",
    "pytest-asyncio",
    "lxml[html_clean]", # readability-lxml が内部で使う lxml.html.clean の依存関係
]
# 開発用依存関係 (テストなど)
dev = ["fetchmd[all]"]

[project.scripts]
# cli.py 内の Typer アプリケーション 'app' を指定
fetchmd = "fetchmd.cli:app"

[tool.hatch.build.targets.wheel]
# パッケージに含めるディレクトリを指定
packages = ["fetchmd"]
